# KOS

./: .gitignore  .kos_history  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  KOS.md  KOS_APPLICATION_GUIDE.md  KOS_APP_INDEX.json  KOS_REPOSITORY_GUIDE.md  KOS_REPO_INDEX.json  KOS_SYSTEM_OVERVIEW.md  OS.py  README.MD  README.md  debug_boot.py  debug_boot2.py  demo.py  demo_host_communication.py  demo_kos.py  demo_script.sh  demo_sdk.py  disk.kdsk  explorer.py  host_driver.py  inject_commands.py  install_services.sh  kaede.kdsk  kaede_demo.py  kos_launcher.py  kos_packages.json  kos_repos.json  kpm.json  main.py  mkdocs.yml  pyproject.toml  pyvenv.cfg  quick_load_commands.py  repo_creator.py  requirements-docs.txt  requirements.txt  setup.py  (+13 more)
KaedeOperatingSystem/: kos_packages.json  kos_repos.json  main.py  pyproject.toml  users.json
attached_assets/: Pasted--15-07-root-kos-main-cd-home-2025-03-19-15-07-46-771-KOS-filesystem-DEBUG-Resolving-path-1742396963915.txt  Pasted--workspace-python3-main-py-2025-03-19-14-49-27-368-KOS-INFO-Initializing-KOS-components-2-1742395777021.txt  Pasted--workspace-python3-main-py-2025-03-19-14-49-27-368-KOS-INFO-Initializing-KOS-components-2-1742396042263.txt  Pasted--workspace-python3-main-py-Traceback-most-recent-call-last-File-home-runner-workspace-main--1742399903899.txt  Pasted-2025-03-19-15-23-14-959-KOS-INFO-Initializing-KOS-components-2025-03-19-15-23-14-959-KOS--1742397804213.txt  Pasted-2025-03-19-16-26-06-191-KOS-INFO-Initializing-KOS-components-2025-03-19-16-26-06-191-KOS--1742401649126.txt  (+1 more)
demo_app/: kaede_project.json
(+693 files in other folders)
